--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <title>Document</title>
 </head>
 <body>
+    <nav id="menu2">
+        <img src="img/cardapio.png" alt="">
+    </nav>
     <nav>
         <div id="menu">
-            <a href="">Home</a>
-            <a href="">Ultimas Edições</a>
-            <a href="">Requisitos para Participar</a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Ultimas Edições</a></li>
+                <li><a href="">Requisitos para Participar</a></li>
+            </ul>
         </div>
         <button id="buttonMenu">Login</button>
     </nav>
